--- a/commons-logging/pom.xml
+++ b/commons-logging/pom.xml
@@ -27,7 +27,6 @@
     <dependency>
       <artifactId>commons-logging</artifactId>
       <groupId>commons-logging</groupId>
-      <scope>provided</scope>
       <version>${commons-logging.version}</version>
     </dependency>
     <dependency>
@@ -45,7 +44,7 @@
     <dependency>
       <artifactId>mock-loggers-core</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
-      <version>1.1.0-SNAPSHOT</version>
+      <version>1.1.0</version>
     </dependency>
     <dependency>
       <artifactId>mockito-core</artifactId>
@@ -63,7 +62,7 @@
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
   </parent>
   <profiles>
     <profile>
