--- a/slf4j/pom.xml
+++ b/slf4j/pom.xml
@@ -39,7 +39,7 @@
     <dependency>
       <artifactId>mock-loggers-core</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
-      <version>1.1.0-SNAPSHOT</version>
+      <version>1.1.0</version>
     </dependency>
     <dependency>
       <artifactId>mockito-core</artifactId>
@@ -53,7 +53,6 @@
     <dependency>
       <artifactId>slf4j-api</artifactId>
       <groupId>org.slf4j</groupId>
-      <scope>provided</scope>
       <version>${slf4j.version}</version>
     </dependency>
   </dependencies>
@@ -63,7 +62,7 @@
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
   </parent>
   <profiles>
     <profile>
