--- a/pom.xml
+++ b/pom.xml
@@ -419,7 +419,7 @@
               </execution>
             </executions>
             <groupId>org.codehaus.mojo</groupId>
-            <version>2.4.0</version>
+            <version>2.5.0</version>
           </plugin>
         </plugins>
       </build>
@@ -515,7 +515,7 @@
   </profiles>
   <properties>
     <java.version>11</java.version>
-    <javadoc-plugin.version>3.11.1</javadoc-plugin.version>
+    <javadoc-plugin.version>3.11.2</javadoc-plugin.version>
     <junit.version>5.11.3</junit.version>
     <mockito.version>5.14.2</mockito.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -526,5 +526,5 @@
     <url>https://github.com/vitalijr2/mock-loggers</url>
   </scm>
   <url>https://github.com/vitalijr2/mock-loggers</url>
-  <version>1.1.0</version>
+  <version>1.1.1-SNAPSHOT</version>
 </project>
