--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build with Maven
         run: ./mvnw --batch-mode
       - name: Temporarily save target and test requests
-        uses: actions/upload-artifact@master
+        uses: actions/upload-artifact@v4
         with:
           name: targets
           path: |
