--- a/core/pom.xml
+++ b/core/pom.xml
@@ -14,6 +14,17 @@
         <groupId>org.apache.maven.plugins</groupId>
       </plugin>
       <plugin>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifestEntries>
+              <Automatic-Module-Name>mock.loggers.core</Automatic-Module-Name>
+            </manifestEntries>
+          </archive>
+        </configuration>
+        <groupId>org.apache.maven.plugins</groupId>
+      </plugin>
+      <plugin>
         <artifactId>jacoco-maven-plugin</artifactId>
         <groupId>org.jacoco</groupId>
       </plugin>
@@ -38,11 +49,6 @@
       <groupId>org.junit.jupiter</groupId>
     </dependency>
     <dependency>
-      <artifactId>junit-platform-commons</artifactId>
-      <groupId>org.junit.platform</groupId>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
       <artifactId>mockito-core</artifactId>
       <groupId>org.mockito</groupId>
     </dependency>
@@ -62,4 +68,20 @@
     <groupId>io.github.vitalijr2.logging</groupId>
     <version>1.1.1-SNAPSHOT</version>
   </parent>
+  <profiles>
+    <profile>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>license-maven-plugin</artifactId>
+            <configuration>
+              <skipCheckLicense>false</skipCheckLicense>
+            </configuration>
+            <groupId>org.codehaus.mojo</groupId>
+          </plugin>
+        </plugins>
+      </build>
+      <id>prepare-and-check</id>
+    </profile>
+  </profiles>
 </project>
