--- a/jdk-platform-logging/pom.xml
+++ b/jdk-platform-logging/pom.xml
@@ -14,6 +14,17 @@
         <groupId>org.apache.maven.plugins</groupId>
       </plugin>
       <plugin>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifestEntries>
+              <Automatic-Module-Name>mock.loggers.platform</Automatic-Module-Name>
+            </manifestEntries>
+          </archive>
+        </configuration>
+        <groupId>org.apache.maven.plugins</groupId>
+      </plugin>
+      <plugin>
         <artifactId>jacoco-maven-plugin</artifactId>
         <groupId>org.jacoco</groupId>
       </plugin>
@@ -60,6 +71,20 @@
     <version>1.1.1-SNAPSHOT</version>
   </parent>
   <profiles>
+    <profile>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>license-maven-plugin</artifactId>
+            <configuration>
+              <skipCheckLicense>false</skipCheckLicense>
+            </configuration>
+            <groupId>org.codehaus.mojo</groupId>
+          </plugin>
+        </plugins>
+      </build>
+      <id>prepare-and-check</id>
+    </profile>
     <profile>
       <build>
         <plugins>
