--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -65,7 +65,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Retrieve saved test requests and target
-        uses: actions/download-artifact@master
+        uses: actions/download-artifact@v4
         with:
           name: targets
           path: .
