--- a/commons-logging/pom.xml
+++ b/commons-logging/pom.xml
@@ -55,7 +55,7 @@
     <dependency>
       <artifactId>mock-loggers-core</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
-      <version>1.1.1</version>
+      <version>1.2.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <artifactId>mockito-core</artifactId>
@@ -73,7 +73,7 @@
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>1.1.1</version>
+    <version>1.2.0-SNAPSHOT</version>
   </parent>
   <profiles>
     <profile>
@@ -121,4 +121,5 @@
   <properties>
     <commons-logging.version>1.3.4</commons-logging.version>
   </properties>
+  <version>1.2.0-SNAPSHOT</version>
 </project>
