--- a/pom.xml
+++ b/pom.xml
@@ -247,6 +247,11 @@
           <version>3.5.2</version>
         </plugin>
         <plugin>
+          <artifactId>semver-maven-plugin</artifactId>
+          <groupId>io.github.q3769</groupId>
+          <version>20240116.0.202411140438</version>
+        </plugin>
+        <plugin>
           <artifactId>sign-maven-plugin</artifactId>
           <groupId>org.simplify4u.plugins</groupId>
           <version>1.1.0</version>
@@ -537,5 +542,5 @@
     <url>https://github.com/vitalijr2/mock-loggers</url>
   </scm>
   <url>https://github.com/vitalijr2/mock-loggers</url>
-  <version>1.1.1</version>
+  <version>1.2.0-SNAPSHOT</version>
 </project>
