--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -18,6 +18,12 @@
         <version>1.2.0-SNAPSHOT</version>
       </dependency>
       <dependency>
+        <artifactId>mock-loggers-elf4j</artifactId>
+        <groupId>io.github.vitalijr2.logging</groupId>
+        <scope>test</scope>
+        <version>1.2.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
         <artifactId>mock-loggers-jdk-platform-logging</artifactId>
         <groupId>io.github.vitalijr2.logging</groupId>
         <scope>test</scope>
