--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -9,43 +9,43 @@
         <artifactId>mock-loggers-commons-logging</artifactId>
         <groupId>io.github.vitalijr2.logging</groupId>
         <scope>test</scope>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.2.0</version>
       </dependency>
       <dependency>
         <artifactId>mock-loggers-core</artifactId>
         <groupId>io.github.vitalijr2.logging</groupId>
         <scope>test</scope>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.2.0</version>
       </dependency>
       <dependency>
         <artifactId>mock-loggers-elf4j</artifactId>
         <groupId>io.github.vitalijr2.logging</groupId>
         <scope>test</scope>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.2.0</version>
       </dependency>
       <dependency>
         <artifactId>mock-loggers-jdk-platform-logging</artifactId>
         <groupId>io.github.vitalijr2.logging</groupId>
         <scope>test</scope>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.2.0</version>
       </dependency>
       <dependency>
         <artifactId>mock-loggers-slf4j</artifactId>
         <groupId>io.github.vitalijr2.logging</groupId>
         <scope>test</scope>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.2.0</version>
       </dependency>
       <dependency>
         <artifactId>mock-loggers-tinylog-provider</artifactId>
         <groupId>io.github.vitalijr2.logging</groupId>
         <scope>test</scope>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.2.0</version>
       </dependency>
       <dependency>
         <artifactId>mock-loggers-tinylog-writer</artifactId>
         <groupId>io.github.vitalijr2.logging</groupId>
         <scope>test</scope>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.2.0</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -56,7 +56,7 @@
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.2.0</version>
   </parent>
   <profiles>
     <profile>
@@ -74,5 +74,5 @@
       <id>release</id>
     </profile>
   </profiles>
-  <version>1.2.0-SNAPSHOT</version>
+  <version>1.2.0</version>
 </project>
