--- a/elf4j/src/it/hello-elf4j-world/pom.xml
+++ b/elf4j/src/it/hello-elf4j-world/pom.xml
@@ -75,13 +75,10 @@
     <dependencies>
       <dependency>
         <artifactId>mock-loggers-bom</artifactId>
-        <!--
         <groupId>@project.groupId@</groupId>
-        -->
-        <groupId>io.github.vitalijr2.logging</groupId>
         <scope>import</scope>
         <type>pom</type>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.2.0</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
