--- a/jdk-platform-logging/src/it/hello-jdk-platform-logging-world/pom.xml
+++ b/jdk-platform-logging/src/it/hello-jdk-platform-logging-world/pom.xml
@@ -71,7 +71,7 @@
         <groupId>@project.groupId@</groupId>
         <scope>import</scope>
         <type>pom</type>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.2.0</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
