--- a/pom.xml
+++ b/pom.xml
@@ -544,5 +544,5 @@
     <url>https://github.com/vitalijr2/mock-loggers</url>
   </scm>
   <url>https://github.com/vitalijr2/mock-loggers</url>
-  <version>1.2.0-SNAPSHOT</version>
+  <version>1.2.0</version>
 </project>
