--- a/slf4j/pom.xml
+++ b/slf4j/pom.xml
@@ -50,7 +50,7 @@
     <dependency>
       <artifactId>mock-loggers-core</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
-      <version>1.2.0-SNAPSHOT</version>
+      <version>1.2.0</version>
     </dependency>
     <dependency>
       <artifactId>mockito-core</artifactId>
@@ -69,7 +69,7 @@
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.2.0</version>
   </parent>
   <profiles>
     <profile>
@@ -117,5 +117,5 @@
   <properties>
     <slf4j.version>2.0.16</slf4j.version>
   </properties>
-  <version>1.2.0-SNAPSHOT</version>
+  <version>1.2.0</version>
 </project>
