--- a/tinylog-provider/src/it/hello-custom-tinylog-world/pom.xml
+++ b/tinylog-provider/src/it/hello-custom-tinylog-world/pom.xml
@@ -81,7 +81,7 @@
         <groupId>@project.groupId@</groupId>
         <scope>import</scope>
         <type>pom</type>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.2.0</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
