--- a/commons-logging/pom.xml
+++ b/commons-logging/pom.xml
@@ -55,16 +55,12 @@
     <dependency>
       <artifactId>mock-loggers-core</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
-      <version>1.2.0-SNAPSHOT</version>
+      <version>1.2.0</version>
     </dependency>
     <dependency>
       <artifactId>mockito-core</artifactId>
       <groupId>org.mockito</groupId>
       <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <artifactId>mockito-junit-jupiter</artifactId>
-      <groupId>org.mockito</groupId>
     </dependency>
   </dependencies>
   <description>Mock loggers for Apache Commons Logging backed by Mockito.</description>
@@ -73,7 +69,7 @@
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.2.0</version>
   </parent>
   <profiles>
     <profile>
@@ -121,5 +117,5 @@
   <properties>
     <commons-logging.version>1.3.5</commons-logging.version>
   </properties>
-  <version>1.2.0-SNAPSHOT</version>
+  <version>1.2.0</version>
 </project>
