--- a/jdk-platform-logging/pom.xml
+++ b/jdk-platform-logging/pom.xml
@@ -50,16 +50,12 @@
     <dependency>
       <artifactId>mock-loggers-core</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
-      <version>1.2.0-SNAPSHOT</version>
+      <version>1.2.0</version>
     </dependency>
     <dependency>
       <artifactId>mockito-core</artifactId>
       <groupId>org.mockito</groupId>
       <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <artifactId>mockito-junit-jupiter</artifactId>
-      <groupId>org.mockito</groupId>
     </dependency>
   </dependencies>
   <description>Mock loggers for JDK Platform Logging backed by Mockito.</description>
@@ -68,7 +64,7 @@
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.2.0</version>
   </parent>
   <profiles>
     <profile>
@@ -97,5 +93,5 @@
       <id>run-its</id>
     </profile>
   </profiles>
-  <version>1.2.0-SNAPSHOT</version>
+  <version>1.2.0</version>
 </project>
