--- a/slf4j/pom.xml
+++ b/slf4j/pom.xml
@@ -6,6 +6,10 @@
   <build>
     <plugins>
       <plugin>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <groupId>org.jacoco</groupId>
+      </plugin>
+      <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <groupId>org.apache.maven.plugins</groupId>
       </plugin>
@@ -23,10 +27,6 @@
           </archive>
         </configuration>
         <groupId>org.apache.maven.plugins</groupId>
-      </plugin>
-      <plugin>
-        <artifactId>jacoco-maven-plugin</artifactId>
-        <groupId>org.jacoco</groupId>
       </plugin>
     </plugins>
   </build>
@@ -50,7 +50,7 @@
     <dependency>
       <artifactId>mock-loggers-core</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
-      <version>1.2.0-SNAPSHOT</version>
+      <version>1.2.0</version>
     </dependency>
     <dependency>
       <artifactId>mockito-core</artifactId>
@@ -58,22 +58,18 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <artifactId>mockito-junit-jupiter</artifactId>
-      <groupId>org.mockito</groupId>
-    </dependency>
-    <dependency>
       <artifactId>slf4j-api</artifactId>
       <groupId>org.slf4j</groupId>
       <version>${slf4j.version}</version>
     </dependency>
   </dependencies>
-  <description>Mock loggers for SLF4J backed by Mockito.</description>
+  <description>Mock loggers for Simple Logging Facade for Java backed by Mockito.</description>
   <modelVersion>4.0.0</modelVersion>
   <name>Mock loggers for SLF4J</name>
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.2.0</version>
   </parent>
   <profiles>
     <profile>
@@ -121,5 +117,5 @@
   <properties>
     <slf4j.version>2.0.16</slf4j.version>
   </properties>
-  <version>1.2.0-SNAPSHOT</version>
+  <version>1.2.0</version>
 </project>
