--- a/pom.xml
+++ b/pom.xml
@@ -449,6 +449,7 @@
           <plugin>
             <artifactId>central-publishing-maven-plugin</artifactId>
             <configuration>
+              <deploymentName>${project.name}</deploymentName>
               <ignorePublishedComponents>true</ignorePublishedComponents>
               <publishingServerId>central</publishingServerId>
             </configuration>
