--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
             </execution>
           </executions>
           <groupId>org.codehaus.mojo</groupId>
-          <version>1.6.0</version>
+          <version>1.7.0</version>
         </plugin>
         <plugin>
           <artifactId>jacoco-maven-plugin</artifactId>
@@ -151,7 +151,7 @@
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
           <groupId>org.apache.maven.plugins</groupId>
-          <version>3.1.3</version>
+          <version>3.1.4</version>
         </plugin>
         <plugin>
           <artifactId>maven-invoker-plugin</artifactId>
@@ -449,6 +449,7 @@
           <plugin>
             <artifactId>central-publishing-maven-plugin</artifactId>
             <configuration>
+              <deploymentName>${project.name}</deploymentName>
               <ignorePublishedComponents>true</ignorePublishedComponents>
               <publishingServerId>central</publishingServerId>
             </configuration>
@@ -534,8 +535,8 @@
   <properties>
     <java.version>11</java.version>
     <javadoc-plugin.version>3.11.2</javadoc-plugin.version>
-    <junit.version>5.11.4</junit.version>
-    <mockito.version>5.15.2</mockito.version>
+    <junit.version>5.12.1</junit.version>
+    <mockito.version>5.16.0</mockito.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <scm>
