--- a/pom.xml
+++ b/pom.xml
@@ -560,7 +560,7 @@
   <properties>
     <compiler-plugin.version>3.14.0</compiler-plugin.version>
     <dependency-plugin.version>3.8.1</dependency-plugin.version>
-    <java.version>11</java.version>
+    <java.version>17</java.version>
     <javadoc-plugin.version>3.12.0</javadoc-plugin.version>
     <junit.version>5.13.4</junit.version>
     <mockito.version>5.20.0</mockito.version>
@@ -573,5 +573,5 @@
     <url>https://gitlab.com/vitalijr2/mock-loggers</url>
   </scm>
   <url>https://gitlab.com/vitalijr2/mock-loggers</url>
-  <version>1.3.0</version>
+  <version>2.0.0-SNAPSHOT</version>
 </project>
