--- a/commons-logging/pom.xml
+++ b/commons-logging/pom.xml
@@ -55,7 +55,7 @@
     <dependency>
       <artifactId>mock-loggers-core</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>2.0.0</version>
     </dependency>
     <dependency>
       <artifactId>mockito-core</artifactId>
@@ -69,7 +69,7 @@
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
   </parent>
   <profiles>
     <profile>
@@ -122,5 +122,5 @@
   <properties>
     <commons-logging.version>1.3.5</commons-logging.version>
   </properties>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0</version>
 </project>
