--- a/core/pom.xml
+++ b/core/pom.xml
@@ -66,7 +66,7 @@
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
   </parent>
   <profiles>
     <profile>
@@ -84,5 +84,5 @@
       <id>prepare-and-check</id>
     </profile>
   </profiles>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0</version>
 </project>
