--- a/elf4j/pom.xml
+++ b/elf4j/pom.xml
@@ -55,7 +55,7 @@
     <dependency>
       <artifactId>mock-loggers-core</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>2.0.0</version>
     </dependency>
     <dependency>
       <artifactId>mockito-core</artifactId>
@@ -73,7 +73,7 @@
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
   </parent>
   <profiles>
     <profile>
@@ -126,5 +126,5 @@
   <properties>
     <elf4j.version>7.0.0</elf4j.version>
   </properties>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0</version>
 </project>
