--- a/jdk-platform-logging/pom.xml
+++ b/jdk-platform-logging/pom.xml
@@ -73,7 +73,7 @@
     <dependency>
       <artifactId>mock-loggers-core</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>2.0.0</version>
     </dependency>
     <dependency>
       <artifactId>mockito-core</artifactId>
@@ -87,7 +87,7 @@
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
   </parent>
   <profiles>
     <profile>
@@ -116,5 +116,5 @@
       <id>run-its</id>
     </profile>
   </profiles>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0</version>
 </project>
