--- a/tinylog-provider/pom.xml
+++ b/tinylog-provider/pom.xml
@@ -55,7 +55,7 @@
     <dependency>
       <artifactId>mock-loggers-core</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>2.0.0</version>
     </dependency>
     <dependency>
       <artifactId>mockito-core</artifactId>
@@ -78,7 +78,7 @@
   <parent>
     <artifactId>mock-loggers</artifactId>
     <groupId>io.github.vitalijr2.logging</groupId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
   </parent>
   <profiles>
     <profile>
@@ -131,5 +131,5 @@
   <properties>
     <tinylog.version>2.7.0</tinylog.version>
   </properties>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0</version>
 </project>
