--- a/jdk-platform-logging/pom.xml
+++ b/jdk-platform-logging/pom.xml
@@ -63,7 +63,7 @@
       <groupId>org.hamcrest</groupId>
     </dependency>
     <dependency>
-      <artifactId>junit-jupiter-engine</artifactId>
+      <artifactId>junit-jupiter-api</artifactId>
       <groupId>org.junit.jupiter</groupId>
     </dependency>
     <dependency>
