--- a/slf4j/pom.xml
+++ b/slf4j/pom.xml
@@ -40,7 +40,7 @@
       <groupId>org.hamcrest</groupId>
     </dependency>
     <dependency>
-      <artifactId>junit-jupiter-engine</artifactId>
+      <artifactId>junit-jupiter-api</artifactId>
       <groupId>org.junit.jupiter</groupId>
     </dependency>
     <dependency>
