--- a/tinylog-writer/pom.xml
+++ b/tinylog-writer/pom.xml
@@ -45,14 +45,6 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <artifactId>junit-jupiter-engine</artifactId>
-      <groupId>org.junit.jupiter</groupId>
-    </dependency>
-    <dependency>
-      <artifactId>junit-jupiter-params</artifactId>
-      <groupId>org.junit.jupiter</groupId>
-    </dependency>
-    <dependency>
       <artifactId>mock-loggers-core</artifactId>
       <groupId>io.github.vitalijr2.logging</groupId>
       <version>2.0.0</version>
@@ -70,6 +62,7 @@
       <artifactId>tinylog-api</artifactId>
       <groupId>org.tinylog</groupId>
       <version>${tinylog.version}</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <artifactId>tinylog-impl</artifactId>
